--- a/XIAOMI-4A_GIGABit/lede.config
+++ b/XIAOMI-4A_GIGABit/lede.config
@@ -290,7 +290,7 @@ CONFIG_EXTERNAL_CPIO=""
 #
 # Root filesystem images
 #
-CONFIG_TARGET_ROOTFS_EXT4FS is not set
+#CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_EXT4_RESERVED_PCT=0
 CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
 # CONFIG_TARGET_EXT4_BLOCKSIZE_2K is not set
@@ -306,7 +306,7 @@ CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 #
 # Image Options
 #
-CONFIG_TARGET_ROOTFS_PARTSIZE=64
+CONFIG_TARGET_ROOTFS_PARTSIZE=28
 # CONFIG_TARGET_ROOTFS_PERSIST_VAR is not set
 # end of Target Images
 
