--- a/.github/workflows/buildOpenWRT_openwrt.yml
+++ b/.github/workflows/buildOpenWRT_openwrt.yml
@@ -27,15 +27,15 @@ on:
           - "openwrt-22.03"
           - "openwrt-23.05"
           - "openwrt-24.10"
-      feeds_file:
-        type: choice
-        description: '替换软件源配置(feeds.conf.default)'
-        options:
-        - "true"
-        - "false"
+#      feeds_file:
+#        type: choice
+#        description: '替换软件源配置(feeds.conf.default)'
+#        options:
+#        - "true"
+#        - "false"
       config_file:
         description: 'config 文件名称(.config)'
-        default: '.config'
+        default: 'lede.config'
       files_path:
         type: choice
         description: '导入补丁目录(files目录)'
@@ -141,11 +141,11 @@ jobs:
         [ -e $BEFOR_PATCH ] && echo $BEFOR_PATCH
         [ -e $AFTER_PATCH ] && echo $AFTER_PATCH
     
-    - name: 替换软件源配置
-      if: env.REPLACE_FEEDS == 'true' && steps.check.outputs.feeds == 'success'
-      run: |
-        [ -e $FEEDS_FILE ] && rm -f openwrt/feeds.conf.default
-        [ -e $FEEDS_FILE ] && mv $FEEDS_FILE openwrt/feeds.conf.default
+#    - name: 替换软件源配置
+#      if: env.REPLACE_FEEDS == 'true' && steps.check.outputs.feeds == 'success'
+#      run: |
+#        [ -e $FEEDS_FILE ] && rm -f openwrt/feeds.conf.default
+#        [ -e $FEEDS_FILE ] && mv $FEEDS_FILE openwrt/feeds.conf.default
     
     - name: 导入补丁目录
       if: env.LOAD_FILES == 'true' && steps.check.outputs.files == 'success'
@@ -195,7 +195,7 @@ jobs:
         echo "Start Time: "$(date +"%Y/%m/%d %H:%M:%S")""
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "End Time: "$(date +"%Y/%m/%d %H:%M:%S")""
-        echo "::set-output name=status::success"
+        echo "status=success" >> "$GITHUB_OUTPUT"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
@@ -215,7 +215,7 @@ jobs:
         cp ../../../../.config ./build.config
         cp ../../../../feeds.conf.default ./feeds.conf.default
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        echo "status=success" >> "$GITHUB_OUTPUT"
         
     - name: 上传固件
       uses: actions/upload-artifact@main
@@ -234,11 +234,11 @@ jobs:
       id: releasetag
       if: env.UPLOAD_RELEASE == 'true' && steps.makefirmware.outputs.status == 'success' && !cancelled()
       run: |
-        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
+        echo "release_tag=$(date +'%Y.%m.%d-%H%M')" >> "$GITHUB_OUTPUT"
         touch release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
-        echo "::set-output name=status::success"
+        echo "status=success" >> "$GITHUB_OUTPUT"
         
     - name: 上传固件到Release
       uses: softprops/action-gh-release@v1
