--- a/.github/workflows/buildOpenWRT_openwrt.yml
+++ b/.github/workflows/buildOpenWRT_openwrt.yml
@@ -35,7 +35,7 @@ on:
 #        - "false"
       config_file:
         description: 'config 文件名称(.config)'
-        default: 'lede.config'
+        default: 'openwrt.config'
       files_path:
         type: choice
         description: '导入补丁目录(files目录)'
